added test to check that nothing happens when field is empty

--- a/views/start.erb
+++ b/views/start.erb
@@ -1,6 +1,6 @@
 <div>
   <form action="/start">
-    <% if @name %>
+    <% if @name!="" && @name %>
       Hello <%= @name %>, welcome to BattleshipsWeb
     <% else %>
       What's your name?
