--- a/views/game.erb
+++ b/views/game.erb
@@ -1,3 +1,7 @@
 <div>
   Please enter coordinate
+  <form action="/game">
+   <input type="text" name="coordinate">
+   <input type="submit" value="Fire!">
+ </form>
 </div>
