--- a/views/new_game.erb
+++ b/views/new_game.erb
@@ -2,4 +2,17 @@
 <html>
 
 <p>What's your name?</p>
+
+<form action="/new_game">
+
+  <input type = 'text' name = 'name'>
+  <input type = 'submit' value = 'Submit'>
+
+</form>
+
+<p> Welcome <%= @name %></p>
+
+
+
 </html>
+
