Can place a ship on the board

--- a/views/name.erb
+++ b/views/name.erb
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-
   What's your name?
-    <form action="/welcome">
-      <input type = 'text' name = 'name'>
-      <input type = 'submit' value = 'Submit'>
-</html>
-
+    <form action="/welcome" method='post'>
+      <input type='text' name='name'>
+      <input type='submit' value='Submit'>
+    </form>
