--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<% if @player_name != "" %>
-  Welcome <%= @player_name %>
-<% else %>
-  <a href="/name">Please click here to enter your name</a>
-<% end %>
-
-</html>
-
+Welcome <%= @player_name %>
+  <form action="/current_game">
+    <input type="submit" value="Start Game">
+  </form>
 
