Can place multiple ships and view board

--- a/views/game.erb
+++ b/views/game.erb
@@ -3,10 +3,16 @@
 <form action="/placed_ship" method="post">
   <input type="text" name="Coordinates">
   <select name="shipTypes">
+    <option value="aircraft_carrier">Aircraft Carrier</option>
+    <option value="battleship">Battleship</option>
+    <option value="cruiser">Cruiser</option>
     <option value="destroyer">Destroyer</option>
+    <option value="submarine">Submarine</option>
   </select>
   <select name="orientation">
     <option value="vertically">Vertically</option>
+    <option value="horizontally">Horizontally</option>
   </select>
   <input type="submit" value="Place Ship">
+
 </form>
