--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,4 +1,4 @@
-Welcome <%= @player_name %>
+Welcome <%= @player_name %> you are <%= assign_player %>
   <form action="/current_game">
     <input type="submit" value="Start Game">
   </form>
