players can know what player they are on start of game

--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,4 +1,11 @@
 Welcome <%= @player_name %>
-  <form action="/current_game">
-    <input type="submit" value="Start Game">
-  </form>
+</br>
+<% if session[:player] == 'player1' %>
+  You are player 1
+<% else %>
+  You are player 2
+<% end %>
+
+<form action="/current_game">
+  <input type="submit" value="Start Game">
+</form>
